[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://DIMITRI_.TTF"

[sub_resource type="DynamicFont" id=8]
size = 46
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://DIMITRI_.TTF"

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://DIMIS___.TTF"

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = SubResource( 1 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_left = 272.0
margin_top = 7.0
margin_right = 354.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
margin_left = 241.0
margin_top = 160.0
margin_right = 381.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 6 )
text = "HOPE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -73.0
margin_right = 75.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 2 )
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="BotonPlay" to="." method="_on_BotonPlay_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
